--- a/database/server/package.json
+++ b/database/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.1",
     "pg": "^8.11.3",
     "postgres-pool": "^8.1.4"
   }
